testsuite/bsc.interra/bugs/bugID334/Design_seq.bsv.bsc-out.expected
checking package dependencies
Error: "Design_seq.bsv", line 4, column 19: (P0005)
  Unexpected BSV 3.8 keyword `seq'; expected method name
